California House Price: Try SVR regression
But it gives a worst result than RandomForest. This confirms my
gutfeeling in previous commits (and I like when my gutfeeling is
confirmed).

--- a/california-house-prices/predictions.ipynb
+++ b/california-house-prices/predictions.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from utils import DataFrameSelector, CategoricalEncoder\n",
@@ -27,10 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df[\"income_cat\"] = np.ceil(df[\"median_income\"] / 1.5)\n",
@@ -49,10 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
@@ -77,10 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_cat = df['ocean_proximity']\n",
@@ -96,10 +88,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
@@ -138,10 +128,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_prepared = full_pipeline.fit_transform(df)"
@@ -149,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +308,7 @@
        "4            342200.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,10 +333,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -370,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +370,7 @@
        "           verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,9 +443,216 @@
    "source": [
     "forest_reg = grid_search.best_estimator_"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVR\n",
+    "\n",
+    "svr_reg = SVR()\n",
+    "svr_reg.fit(X_train, y_train)\n",
+    "\n",
+    "params_grid = [\n",
+    "    {'kernel': ['linear', 'poly', 'rbf', 'sigmoid']}\n",
+    "]\n",
+    "\n",
+    "grid_search = GridSearchCV(svr_reg, params_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Display the results of the GridSearch\n",
+    "cvres = grid_search.cv_results_\n",
+    "for mean_score, std_score, params in zip(cvres['mean_test_score'], cvres['std_test_score'], cvres['params']):\n",
+    "    print(np.sqrt(-mean_score), np.sqrt(std_score), params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No kernel show results really better. So I will fine tune a LinearSVR because it's faster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=None, error_score='raise',\n",
+       "          estimator=LinearSVR(C=1.0, dual=True, epsilon=0.0, fit_intercept=True,\n",
+       "     intercept_scaling=1.0, loss='epsilon_insensitive', max_iter=1000,\n",
+       "     random_state=None, tol=0.0001, verbose=0),\n",
+       "          fit_params={}, iid=True, n_iter=100, n_jobs=1,\n",
+       "          param_distributions={'loss': ['epsilon_insensitive', 'squared_epsilon_insensitive'], 'C': <scipy.stats._distn_infrastructure.rv_frozen object at 0x107991d90>},\n",
+       "          pre_dispatch='2*n_jobs', random_state=None, refit=True,\n",
+       "          return_train_score=True, scoring='neg_mean_squared_error',\n",
+       "          verbose=0)"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.svm import LinearSVR\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from scipy.stats import uniform\n",
+    "\n",
+    "svr_reg = LinearSVR()\n",
+    "\n",
+    "params_search = {\n",
+    "    'C': uniform(.1, 10),\n",
+    "    'loss':  ['epsilon_insensitive', 'squared_epsilon_insensitive']\n",
+    "}\n",
+    "\n",
+    "random_search = RandomizedSearchCV(svr_reg, params_search, n_iter=100, scoring='neg_mean_squared_error')\n",
+    "random_search.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(67542.391432609627, 14180.209594871229, {'loss': 'squared_epsilon_insensitive', 'C': 2.5347796840486727})\n",
+      "(163745.18627915619, 20881.94336451788, {'loss': 'epsilon_insensitive', 'C': 6.2408131118473609})\n",
+      "(134962.03347554221, 18075.057715918749, {'loss': 'epsilon_insensitive', 'C': 9.6622219064894832})\n",
+      "(159289.99658171271, 20716.515442205815, {'loss': 'epsilon_insensitive', 'C': 6.6869214620744355})\n",
+      "(226300.84530112945, 24398.627011862911, {'loss': 'epsilon_insensitive', 'C': 0.8641685943805143})\n",
+      "(67714.231018705934, 13219.703437019829, {'loss': 'squared_epsilon_insensitive', 'C': 2.6305843280078456})\n",
+      "(67566.1320645589, 15147.097239713316, {'loss': 'squared_epsilon_insensitive', 'C': 5.0545210346098175})\n",
+      "(207646.82283034956, 23745.304478541402, {'loss': 'epsilon_insensitive', 'C': 2.3696469436536414})\n",
+      "(140067.10169703022, 18403.415059495415, {'loss': 'epsilon_insensitive', 'C': 8.9245944045609971})\n",
+      "(67558.788077394987, 14661.228197357614, {'loss': 'squared_epsilon_insensitive', 'C': 4.5327308744361821})\n",
+      "(151126.31378429956, 19796.393220697766, {'loss': 'epsilon_insensitive', 'C': 7.5620725748183855})\n",
+      "(222665.12405800223, 24276.27829028785, {'loss': 'epsilon_insensitive', 'C': 1.1536753395280597})\n",
+      "(188465.62703409896, 22902.198267001098, {'loss': 'epsilon_insensitive', 'C': 3.9759523148276954})\n",
+      "(133967.61326447845, 17663.472471312634, {'loss': 'epsilon_insensitive', 'C': 9.8074995767067019})\n",
+      "(67515.404661320703, 14615.070713202507, {'loss': 'squared_epsilon_insensitive', 'C': 3.6484136025689042})\n",
+      "(68634.984488721529, 10071.724387420303, {'loss': 'squared_epsilon_insensitive', 'C': 8.4053445640483986})\n",
+      "(67632.654126667898, 12922.578069367653, {'loss': 'squared_epsilon_insensitive', 'C': 0.92617663459268684})\n",
+      "(68050.732058326001, 15221.162092741059, {'loss': 'squared_epsilon_insensitive', 'C': 7.9248492456393791})\n",
+      "(158474.36961691623, 20543.610582371537, {'loss': 'epsilon_insensitive', 'C': 6.7735039804642838})\n",
+      "(203562.37563381562, 23614.745124560839, {'loss': 'epsilon_insensitive', 'C': 2.7071329991991653})\n",
+      "(178046.27679231105, 22090.528758921442, {'loss': 'epsilon_insensitive', 'C': 4.8825529457592367})\n",
+      "(220183.48334822166, 24193.318664457151, {'loss': 'epsilon_insensitive', 'C': 1.3523357043282713})\n",
+      "(67691.66680353765, 14767.865188946171, {'loss': 'squared_epsilon_insensitive', 'C': 4.9601550297753985})\n",
+      "(67650.208147827492, 15369.372595791167, {'loss': 'squared_epsilon_insensitive', 'C': 6.2649972689508342})\n",
+      "(67553.952806505447, 13685.794328378777, {'loss': 'squared_epsilon_insensitive', 'C': 1.2080796217980705})\n",
+      "(67490.525285381678, 14705.959653698032, {'loss': 'squared_epsilon_insensitive', 'C': 3.8599288994131142})\n",
+      "(67628.742219885389, 13230.244117304968, {'loss': 'squared_epsilon_insensitive', 'C': 1.7368380146530149})\n",
+      "(157643.7150934099, 20670.395490217605, {'loss': 'epsilon_insensitive', 'C': 6.8598227558635534})\n",
+      "(67998.422594423275, 14834.532337296447, {'loss': 'squared_epsilon_insensitive', 'C': 10.024154004894701})\n",
+      "(67898.881777248534, 14703.177437291019, {'loss': 'squared_epsilon_insensitive', 'C': 8.8926865999783811})\n",
+      "(67655.248446388185, 15337.702412513732, {'loss': 'squared_epsilon_insensitive', 'C': 6.4607076372982508})\n",
+      "(68078.406930990459, 13840.011923845635, {'loss': 'squared_epsilon_insensitive', 'C': 7.5819190597899748})\n",
+      "(67576.685878782766, 13057.091431538087, {'loss': 'squared_epsilon_insensitive', 'C': 0.63858206998026124})\n",
+      "(67492.75571044907, 14502.540180306178, {'loss': 'squared_epsilon_insensitive', 'C': 2.7933129830202508})\n",
+      "(222342.71968231676, 24265.543316535786, {'loss': 'epsilon_insensitive', 'C': 1.1794371464646436})\n",
+      "(134354.97200929912, 17844.063706084555, {'loss': 'epsilon_insensitive', 'C': 9.7512974212699657})\n",
+      "(67590.273543199452, 14337.817282544986, {'loss': 'squared_epsilon_insensitive', 'C': 3.5238363603354652})\n",
+      "(151351.41890743354, 19809.055412138914, {'loss': 'epsilon_insensitive', 'C': 7.5342378607660923})\n",
+      "(67565.980180309009, 13645.840941886101, {'loss': 'squared_epsilon_insensitive', 'C': 1.6156937158767359})\n",
+      "(140472.59965853606, 18500.565516826049, {'loss': 'epsilon_insensitive', 'C': 8.87138441511404})\n",
+      "(67603.893747546594, 14499.638463453444, {'loss': 'squared_epsilon_insensitive', 'C': 5.6804232514896693})\n",
+      "(67810.945458850227, 15990.29865592313, {'loss': 'squared_epsilon_insensitive', 'C': 8.9145077967502129})\n",
+      "(67971.758132635921, 14594.350930561313, {'loss': 'squared_epsilon_insensitive', 'C': 8.8981648594193867})\n",
+      "(67730.948785189234, 14027.449075910587, {'loss': 'squared_epsilon_insensitive', 'C': 7.5234805057250913})\n",
+      "(67662.478629135832, 15373.330453577906, {'loss': 'squared_epsilon_insensitive', 'C': 6.9788410987991512})\n",
+      "(67590.462464208889, 15144.58851348327, {'loss': 'squared_epsilon_insensitive', 'C': 5.3415917072616219})\n",
+      "(67865.810501272746, 13522.341039000348, {'loss': 'squared_epsilon_insensitive', 'C': 8.4268046934704319})\n",
+      "(68119.213662981449, 12636.603143945335, {'loss': 'squared_epsilon_insensitive', 'C': 7.6867639011100479})\n",
+      "(68307.819826360952, 12032.882044572989, {'loss': 'squared_epsilon_insensitive', 'C': 8.5197037149670862})\n",
+      "(220248.24569261161, 24195.493340729638, {'loss': 'epsilon_insensitive', 'C': 1.3471405691139049})\n",
+      "(68149.659032148207, 12776.68369441, {'loss': 'squared_epsilon_insensitive', 'C': 7.9039977614727448})\n",
+      "(67561.315854963075, 15214.331333331449, {'loss': 'squared_epsilon_insensitive', 'C': 6.7304200450049221})\n",
+      "(67568.398118770987, 13102.857949793904, {'loss': 'squared_epsilon_insensitive', 'C': 0.39071380343953732})\n",
+      "(188456.71219260592, 22906.958313642026, {'loss': 'epsilon_insensitive', 'C': 3.9767359475039421})\n",
+      "(174488.4551007117, 21928.80662435518, {'loss': 'epsilon_insensitive', 'C': 5.2010971249882516})\n",
+      "(67479.605623327734, 14418.831794795939, {'loss': 'squared_epsilon_insensitive', 'C': 2.3543875546369386})\n",
+      "(67789.659086931206, 14012.289401601491, {'loss': 'squared_epsilon_insensitive', 'C': 4.9659766224375304})\n",
+      "(233069.80129909873, 24616.956567815891, {'loss': 'epsilon_insensitive', 'C': 0.32932811268042028})\n",
+      "(67657.086678092062, 13179.103078856571, {'loss': 'squared_epsilon_insensitive', 'C': 1.5899973614924345})\n",
+      "(133208.71455683585, 17479.9766802741, {'loss': 'epsilon_insensitive', 'C': 9.9196919044614518})\n",
+      "(173393.10847258396, 21883.484073159987, {'loss': 'epsilon_insensitive', 'C': 5.3029657691865406})\n",
+      "(152023.14886324303, 19990.125584226487, {'loss': 'epsilon_insensitive', 'C': 7.4550560648753752})\n",
+      "(67597.200766927985, 13184.996795846489, {'loss': 'squared_epsilon_insensitive', 'C': 0.72542226897368434})\n",
+      "(68124.242478962144, 12311.65689937945, {'loss': 'squared_epsilon_insensitive', 'C': 7.4361583004231244})\n",
+      "(67684.347930990873, 14253.559004338596, {'loss': 'squared_epsilon_insensitive', 'C': 6.4755326447022972})\n",
+      "(156699.9326500567, 20532.235123600261, {'loss': 'epsilon_insensitive', 'C': 6.959112710498637})\n",
+      "(67739.855825639854, 14607.551724372493, {'loss': 'squared_epsilon_insensitive', 'C': 7.4998638668561171})\n",
+      "(67679.447386279993, 14849.158023348389, {'loss': 'squared_epsilon_insensitive', 'C': 5.7554996492144035})\n",
+      "(67970.716680374462, 13248.612045090562, {'loss': 'squared_epsilon_insensitive', 'C': 7.1025195944452095})\n",
+      "(155580.22333276816, 20393.868727898902, {'loss': 'epsilon_insensitive', 'C': 7.0767062752007508})\n",
+      "(228859.490560398, 24481.716475117883, {'loss': 'epsilon_insensitive', 'C': 0.66136103416210001})\n",
+      "(67577.921127769296, 14408.580629640574, {'loss': 'squared_epsilon_insensitive', 'C': 3.8691416473637195})\n",
+      "(67518.738904345315, 14880.308430965786, {'loss': 'squared_epsilon_insensitive', 'C': 4.4518039925535673})\n",
+      "(67740.527612414793, 14361.951969488831, {'loss': 'squared_epsilon_insensitive', 'C': 6.4117064595670632})\n",
+      "(67697.85001415202, 14214.057179795593, {'loss': 'squared_epsilon_insensitive', 'C': 9.1939019200839613})\n",
+      "(67537.795781714027, 13417.077332762083, {'loss': 'squared_epsilon_insensitive', 'C': 0.67280251077623354})\n",
+      "(67771.253276758755, 13396.218813675423, {'loss': 'squared_epsilon_insensitive', 'C': 4.0883602970372941})\n",
+      "(67578.803317475031, 12899.6203486134, {'loss': 'squared_epsilon_insensitive', 'C': 0.2340262643216561})\n",
+      "(231373.24188151959, 24562.678668950746, {'loss': 'epsilon_insensitive', 'C': 0.46287622613502155})\n",
+      "(68102.578081172222, 12473.315927469173, {'loss': 'squared_epsilon_insensitive', 'C': 7.97126602601604})\n",
+      "(183655.02901424587, 22474.830385596943, {'loss': 'epsilon_insensitive', 'C': 4.3888687886103854})\n",
+      "(67507.137369390504, 13982.874458301765, {'loss': 'squared_epsilon_insensitive', 'C': 1.6638180440344796})\n",
+      "(163177.68706492704, 20765.021346776986, {'loss': 'epsilon_insensitive', 'C': 6.2969944019941568})\n",
+      "(197026.51174213222, 23274.286302979945, {'loss': 'epsilon_insensitive', 'C': 3.2518952109735899})\n",
+      "(67545.610493648041, 14102.971635229818, {'loss': 'squared_epsilon_insensitive', 'C': 2.4678430931138542})\n",
+      "(67604.507948557701, 13379.177307717355, {'loss': 'squared_epsilon_insensitive', 'C': 1.379882085335864})\n",
+      "(67846.612426112566, 14874.900343686257, {'loss': 'squared_epsilon_insensitive', 'C': 8.3786837532217273})\n",
+      "(176238.88906212401, 22042.734647186364, {'loss': 'epsilon_insensitive', 'C': 5.0448113129509293})\n",
+      "(153005.30462001718, 20091.690611123686, {'loss': 'epsilon_insensitive', 'C': 7.3515572755111478})\n",
+      "(197803.22085083491, 23274.229380559565, {'loss': 'epsilon_insensitive', 'C': 3.1869874337319524})\n",
+      "(213031.19389467151, 23933.962004693472, {'loss': 'epsilon_insensitive', 'C': 1.9301544423472716})\n",
+      "(184922.78879731669, 22546.226502047633, {'loss': 'epsilon_insensitive', 'C': 4.2798993387048432})\n",
+      "(67709.260567143632, 14028.584761885139, {'loss': 'squared_epsilon_insensitive', 'C': 5.5510552826069963})\n",
+      "(186556.72144524159, 22732.645277421459, {'loss': 'epsilon_insensitive', 'C': 4.1397787632654826})\n",
+      "(67838.23977140036, 13478.801779983933, {'loss': 'squared_epsilon_insensitive', 'C': 5.5883865672005868})\n",
+      "(67804.409261006367, 15397.928604988179, {'loss': 'squared_epsilon_insensitive', 'C': 8.5691872808855987})\n",
+      "(158757.37137960395, 20594.177852209854, {'loss': 'epsilon_insensitive', 'C': 6.7418791450541731})\n",
+      "(141585.62358574383, 18579.439593540668, {'loss': 'epsilon_insensitive', 'C': 8.7198690840427222})\n",
+      "(199977.65361588169, 23431.050995638489, {'loss': 'epsilon_insensitive', 'C': 3.0058755980635508})\n",
+      "(192187.10335808492, 23110.108394129962, {'loss': 'epsilon_insensitive', 'C': 3.6597337379485273})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display the results of the GridSearch\n",
+    "cvres = random_search.cv_results_\n",
+    "for mean_score, std_score, params in zip(cvres['mean_test_score'], cvres['std_test_score'], cvres['params']):\n",
+    "    if mean_score < 0:\n",
+    "        mean_score = -mean_score\n",
+    "    print(np.sqrt(mean_score), np.sqrt(std_score), params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We could tune LinearSVM up to a RMSE  67 490 which start to be good. Random forest stay the model that previously gave better results (52 079)."
+   ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
